<resources>
    <string name="app_name">EcoWild</string>
    <string name="ecowild">ECOWILD</string>
    <string name="se_connecter">Se connecter</string>
    <string name="nom_de_compte">Nom de compte</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="validez_votre_mot_de_passe">Valide ton mot de passe</string>
    <string name="devenir_membre">Devenir membre</string>
    <string name="devenir_membreActivity">Devenir membre</string>
    <string name="conserver_mes_identifiants">Conserver mes identifiants</string>
    <string name="se_connecter_connection">Se connecter</string>
    <string name="nom_de_compte_connection">Nom de compte</string>
    <string name="mot_de_passe_connection">Mot de passe</string>
    <string name="mot_de_passe_oubli">Mot de passe oublié ?</string>
    <string name="ancien_mot_de_passe">Ancien mot de passe</string>
    <string name="nouveau_mot_de_passe">Nouveau mot de passe</string>
    <string name="modifier_mot_de_passe2">Modifier ton mot de passe</string>
    <string name="title_activity_maps">Map</string>
    <string name="remplissez_tout_les_champs">Remplis tous les champs</string>
    <string name="password">Modifier ton mot de passe</string>
    <string name="snack">Connecte-toi pour plus de fonctionnalités</string>
    <string name="Verre">Dépôts de verre retirés de la carte</string>
    <string name="Papier">Dépôts de papier retirés de la carte</string>
    <string name="Toast">Tu as gagné un point d\'expérience !</string>
    <string name="déconnexion">Déconnexion</string>
    <string name="param_tres">Paramètres</string>
    <string name="informations_utiles">Informations utiles</string>
    <string name="error">Tes mots de passe ne correspondent pas</string>
    <string name="confirmation">Confirme ton mot de passe</string>
    <string name="move_profil">Modifier mon profil</string>
    <string name="gps">GPS</string>
    <string name="notifications">Notifications</string>
    <string name="new_compte">Nouveau nom de compte</string>
    <string name="new_compte2">Valide ton nom de compte</string>
    <string name="move_compte">Modifier ton nom de Compte</string>
    <string name="avatar">Avatar</string>
    <string name="name">P</string>
    <string name="password2">Mot de passe</string>
    <string name="alerte">Alerte proximité</string>
    <string name="alert_message">Tu es à moins de 2 mètres d\'un lieu de collecte. Veux-tu recycler?</string>
    <string name="connexion">Connexion</string>
    <string name="carte">Carte</string>
    <string name="liste">Liste</string>
    <string name="pseudo">Pseudo</string>
    <string name="geoloc_refused">Tu as refusé la géolocalisation.</string>
    <string name="geoloc_off">Géolocalisation désactivée</string>
    <string name="je_viens_de_recycler">J\'ai trié</string>
    <string name="yes">OUI</string>
    <string name="no">NON</string>
    <string name="lock_buttons">Verrouiller la\nposition des îcones</string>
    <string name="unlock_button">Déverrouiller la\nposition des îcones</string>
    <string name="popup">Popup</string>
    <string name="rang">EcoNoob</string>
    <string name="rang1">EcoNoob</string>
    <string name="rang2">EcoCool</string>
    <string name="rang3">EcoFan</string>
    <string name="rang4">EcoWild</string>
    <string name="rang5">EcoGod</string>
    <string name="lvl">Niveau :</string>
    <string name="rang_et_level">Rang et Level</string>
    <string name="error_identification">Ton mot de passe n\'est pas correct</string>
    <string name="filter_alert">Merci de garder un filtre activé</string>
    <string name="repeat">Ce nom d\'utilisateur est déjà utilisé</string>
    <string name="xp_base">0/10</string>
    <string name="xp_progress">%d/10</string>
    <string name="xppp">0/10</string>
    <string name="xp_connection">Niveau :</string>
    <string name="xp_ooo">/10</string>
    <string name="move_password">Ton mot de passe a été modifié</string>
    <string name="false_password">Ton mot de passe actuel n\'est pas correct</string>
    <string name="new_password_false">Tes nouveaux mots de passe ne correspondent pas</string>
    <string name="name_move">Ton nom d\'utilisateur a été modifié</string>
    <string name="password_false">Ce nom d\'utilisateur n\'existe pas</string>
    <string name="ou">OU</string>
    <string name="recycling">Devenir l\'EcoGod du recyclage veux-tu ?</string>
    <string name="score_0">Score : 0</string>
    <string name="nom_createurs">Claire Bertrand, Valentin Destruel et Francois Nys</string>
    <string name="apprenti">Mon apprenti un jour tu seras</string>
    <string name="go_game">Jetter dans le bons conteneurs les dechets tu devras. De l\'experience tu gagneras mais te tromper tu ne devras pas !</string>
    <string name="positive_xp">+1xp</string>
    <string name="negative_xp">-1xp</string>
    <string name="positive1">Le côté obscur tu oublieras.</string>
    <string name="positive2">Joué tu as bien.</string>
    <string name="positive3">Sur le bon chemin tu es.</string>
    <string name="positive4">Parfait !</string>
    <string name="positive5">Maître EcoGod tu deviendras !</string>
    <string name="positive6">Le tri tu possèdes !</string>
    <string name="negative1">Du côté obscur tu deviens !</string>
    <string name="negative2">Dark EcoGod tu deviendras !</string>
    <string name="negative3">Mon EcoWan ne veux-tu plus être ?</string>
    <string name="negative4">Nul !</string>
    <string name="negative5">En toi le tri faiblit !</string>
    <string name="negative6">Disparu le respect a !</string>
    <string name="score">Scores : </string>
    <string name="gain_game">Gagné </string>
    <string name="gain2"> XP tu as. Demain, ton apprentissage tu reprendras.</string>
    <string name="lose">Perdu </string>
    <string name="lose2"> XP tu as   . Demain, t\'entrainer tu devras</string>
    <string name="jeux">JEUX</string>
    <string name="go_game_apprenti">Ton apprentissage tu dois commencer.\n\nY parvenir tu peux :</string>
    <string name="ecogame">EcoGame</string>
    <string name="delete_compte">Es-tu sûr de vouloir supprimer ton compte?</string>
    <string name="delete">Ton compte a été supprimé</string>
    <string name="dejajoue">Déjà joué tu as aujourd\'hui ! Revenir demain tu pourras.</string>
    <string name="go_guide">En allant sur la droite, tu peux accèder au guide du tri de l\'agglomération de Toulouse.</string>
    <string name="coonected">Pour accèder à toutes les fonctionnalités, tu dois te connecter</string>
    <string name="page_zéro">EcoWild est une application mobile qui permet de repérer les points de recyclagles de l’agglomération de Toulouse. Elle affiche une première page composée d\'une carte et de marqueurs.\n\nEn cliquant sur un switch, tu es redirigé vers une autre page représentant les lieux de collecte sous forme de liste. L\'application permet aussi de filtrer en fonction de tes besoins, de te géolocaliser et permet aussi de tracer un itinéraire jusqu\'à un lieu de collecte.\n\nPlus tu recycles, plus tu gagnes des points expériences. Ils te permettent de gagner des rangs.\n\n\nCréateurs : Claire Bertrand, Valentin Destruel et François Nys</string>
    <string name="arlete">Alerte</string>
    <string name="page_zéro">EcoWild est une application mobile qui permet de repérer les points de recyclagles de l’agglomération de Toulouse. Elle affiche une première page composée d\'une carte et de marqueurs.\n\nEn cliquant sur un switch, tu es redirigé vers une autre page représentant les lieux de collecte sous forme de liste. L\'application permet aussi de filtrer en fonction de tes besoins, de te géolocaliser et permet aussi de tracer un itinéraire jusqu\'à un lieu de collecte.\n\nPlus tu recycles, plus tu gagnes des points expériences. Ils te permettent de gagner des rangs.\n\nCréateurs : Claire Bertrand, Valentin Destruel et François Nys</string>
    <string name="arlete">Attention !</string>
</resources>
